--- a/acabados.html
+++ b/acabados.html
@@ -15,7 +15,7 @@
 
 p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -127,7 +127,7 @@ p {
   <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
   <a href="infraestructura.html">05. INFRAESTRUCTURA TÉCNICA Y OPERATIVA</a>
-  <a href="acabados.html">06. ACABADOS Y DETALLES INTERIORES</a>
+  <a href="acabados.html" class="active">06. ACABADOS Y DETALLES INTERIORES</a>
   <a href="mantenimiento.html">07. MANTENIMIENTO INTEGRAL</a>
   <a href="polizas.html">08. PÓLIZAS Y CONTRATOS DE SERVICIO</a>
   <a href="suministro.html">09. COMERCIALIZACIÓN Y SUMINISTRO</a>
@@ -150,13 +150,16 @@ p {
   </p>
 
   <h3>Subservicios Incluidos</h3>
+  <br>
 
   <strong>Carpintería</strong>
+  <br><br>
   <ul>
     <li>Ventanas, puertas, cancel, fijos, domos, escaleras.</li>
   </ul>
-
+  <br>
   <strong>Acabados Finales</strong>
+  <br><br>
   <ul>
     <li>Recubrimiento de muros</li>
     <li>Recubrimiento de pisos</li>
@@ -165,8 +168,9 @@ p {
     <li>Pintura y barniz</li>
     <li>Mamparas, paneles y prefabricados</li>
   </ul>
-
+  <br>
   <strong>Mobiliario Integrado</strong>
+  <br><br>
   <ul>
     <li>Soluciones de mobiliario personalizadas y adaptadas a cada espacio.</li>
   </ul>
