--- a/climatizacion.html
+++ b/climatizacion.html
@@ -15,7 +15,7 @@
 
 p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -124,7 +124,7 @@ p {
   <a href="obra-civil.html">01. OBRA CIVIL Y ESTRUCTURA</a>
   <a href="instalaciones.html">02. INSTALACIONES ESPECIALIZADAS</a>
   <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
-  <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
+  <a href="climatizacion.html" class="active">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
   <a href="infraestructura.html">05. INFRAESTRUCTURA TÉCNICA Y OPERATIVA</a>
   <a href="acabados.html">06. ACABADOS Y DETALLES INTERIORES</a>
   <a href="mantenimiento.html">07. MANTENIMIENTO INTEGRAL</a>
@@ -150,13 +150,15 @@ p {
 <small>[ Adicionales ]</small>
 
 <h3>Subservicios Incluidos</h3>
-
+<br>
 <h4>Aire Acondicionado y Ventilación</h4>
+<br>
 <ul>
   <li>Sistemas de aire acondicionado y ventilación adaptados a las necesidades específicas de cada proyecto.</li>
 </ul>
-
+<br>
 <h4>Sistemas de Control Ambiental</h4>
+<br>
 <ul>
   <li>Integración de tecnología para el monitoreo y regulación de la temperatura, humedad y calidad del aire.</li>
 </ul>
