--- a/instalaciones.html
+++ b/instalaciones.html
@@ -15,7 +15,7 @@
 
 p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -50,7 +50,7 @@ p {
 
   <div class="dropdown-menu">
     <a href="obra-civil.html">Obra Civil y Estructura</a>
-    <a href="instalaciones.html">Instalaciones Especializadas</a>
+    <a href="instalaciones.html" >Instalaciones Especializadas</a>
     <a href="seguridad.html">Sistemas de Seguridad</a>
     <a href="climatizacion.html">Climatización y Control Ambiental</a>
     <a href="infraestructura.html">Infraestructura Técnica y Operativa</a>
@@ -123,7 +123,7 @@ p {
    <aside class="service-menu">
 
   <a href="obra-civil.html">01. OBRA CIVIL Y ESTRUCTURA</a>
-  <a href="instalaciones.html">02. INSTALACIONES ESPECIALIZADAS</a>
+  <a href="instalaciones.html" class="active">02. INSTALACIONES ESPECIALIZADAS</a>
   <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
   <a href="infraestructura.html">05. INFRAESTRUCTURA TÉCNICA Y OPERATIVA</a>
@@ -152,15 +152,16 @@ p {
 </p>
 
 <h3>Subservicios Incluidos</h3>
-
+<br>
 <h4>Instalación Hidráulica</h4>
 <ul>
   <li>Ramal</li>
   <li>Salida</li>
   <li>Sistemas solares</li>
 </ul>
-
+<br>
 <h4>Instalación Sanitaria y Pluvial</h4>
+<br>
 <ul>
   <li>Ramal</li>
   <li>Salida</li>
@@ -168,8 +169,9 @@ p {
   <li>Bajada pluvial</li>
   <li>Capacitación pluvial</li>
 </ul>
-
+<br>
 <h4>Instalación Eléctrica</h4>
+<br>
 <ul>
   <li>Acometida</li>
   <li>Alimentadores</li>
