--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -15,7 +15,7 @@
 
 p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -128,7 +128,7 @@ p {
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
   <a href="infraestructura.html">05. INFRAESTRUCTURA TÉCNICA Y OPERATIVA</a>
   <a href="acabados.html">06. ACABADOS Y DETALLES INTERIORES</a>
-  <a href="mantenimiento.html">07. MANTENIMIENTO INTEGRAL</a>
+  <a href="mantenimiento.html" class="active">07. MANTENIMIENTO INTEGRAL</a>
   <a href="polizas.html">08. PÓLIZAS Y CONTRATOS DE SERVICIO</a>
   <a href="suministro.html">09. COMERCIALIZACIÓN Y SUMINISTRO</a>
 
@@ -151,18 +151,22 @@ p {
   </p>
 
   <h3>Subservicios Incluidos</h3>
-
+  <br>
   <strong>Mantenimiento Preventivo</strong>
+  <br><br>
   <ul>
     <li>Revisiones periódicas para evitar fallos y prolongar la vida útil de los sistemas.</li>
   </ul>
 
+  <br>
   <strong>Mantenimiento Correctivo</strong>
+  <br><br>
   <ul>
     <li>Reparación y solución de problemas puntuales para restaurar la funcionalidad.</li>
   </ul>
-
+  <br>
   <strong>Mantenimiento Predictivo</strong>
+  <br><br>
   <ul>
     <li>Uso de tecnología avanzada para anticipar y prevenir posibles fallos.</li>
   </ul>
