--- a/polizas.html
+++ b/polizas.html
@@ -15,7 +15,7 @@
 
 p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -128,7 +128,7 @@ p {
   <a href="infraestructura.html">05. INFRAESTRUCTURA TÉCNICA Y OPERATIVA</a>
   <a href="acabados.html">06. ACABADOS Y DETALLES INTERIORES</a>
   <a href="mantenimiento.html">07. MANTENIMIENTO INTEGRAL</a>
-  <a href="polizas.html">08. PÓLIZAS Y CONTRATOS DE SERVICIO</a>
+  <a href="polizas.html" class="active">08. PÓLIZAS Y CONTRATOS DE SERVICIO</a>
   <a href="suministro.html">09. COMERCIALIZACIÓN Y SUMINISTRO</a>
 
 </aside>
@@ -149,18 +149,22 @@ p {
   </p>
 
   <h3>Subservicios Incluidos</h3>
-
+  <br>
   <strong>Pólizas de Mantenimiento General</strong>
+  <br><br>
   <ul>
     <li>Cobertura básica para garantizar el correcto funcionamiento de las instalaciones.</li>
   </ul>
-
+  <br>
   <strong>Pólizas Especializadas</strong>
+  <br><br>
   <ul>
+    
     <li>Servicios de mantenimiento diseñados para cubrir necesidades técnicas específicas.</li>
   </ul>
-
+  <br>
   <strong>Asesoramiento en Gestión de Mantenimiento</strong>
+  <br><br>
   <ul>
     <li>Consultoría y apoyo en la administración de actividades de mantenimiento.</li>
   </ul>
