--- a/seguridad.html
+++ b/seguridad.html
@@ -15,7 +15,7 @@
 
 p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -124,7 +124,7 @@ p {
 
   <a href="obra-civil.html">01. OBRA CIVIL Y ESTRUCTURA</a>
   <a href="instalaciones.html">02. INSTALACIONES ESPECIALIZADAS</a>
-  <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
+  <a href="seguridad.html" class="active">03. SISTEMAS DE SEGURIDAD</a>
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
   <a href="infraestructura.html">05. INFRAESTRUCTURA TÉCNICA Y OPERATIVA</a>
   <a href="acabados.html">06. ACABADOS Y DETALLES INTERIORES</a>
@@ -151,13 +151,15 @@ p {
 <small>[ Adicionales ]</small>
 
 <h3>Subservicios Incluidos</h3>
-
+<br>
 <h4>Sistema contra incendios</h4>
+<br>
 <ul>
   <li>Instalación y mantenimiento de sistemas de detección y supresión de incendios.</li>
 </ul>
-
+<br>
 <h4>Sistema de vigilancia y control de accesos</h4>
+<br>
 <ul>
   <li>Sistemas de cámaras de seguridad, sensores de movimiento y control de accesos para la protección del entorno.</li>
 </ul>
