--- a/suministro.html
+++ b/suministro.html
@@ -15,7 +15,7 @@
 
 p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -130,7 +130,7 @@ p {
   <a href="acabados.html">06. ACABADOS Y DETALLES INTERIORES</a>
   <a href="mantenimiento.html">07. MANTENIMIENTO INTEGRAL</a>
   <a href="polizas.html">08. PÓLIZAS Y CONTRATOS DE SERVICIO</a>
-  <a href="suministro.html">09. COMERCIALIZACIÓN Y SUMINISTRO</a>
+  <a href="suministro.html" class="active">09. COMERCIALIZACIÓN Y SUMINISTRO</a>
 
 </aside>
 
@@ -151,13 +151,15 @@ p {
   </p>
 
   <h3>Subservicios Incluidos</h3>
-
+  <br>
   <strong>Acero Inmobiliario</strong>
+  <br><br>
   <ul>
     <li>Suministro de acero estructural para soportar las necesidades de construcción.</li>
   </ul>
-
+  <br>
   <strong>Materiales de Construcción y Acabados</strong>
+  <br><br>
   <ul>
     <li>Provisión de materiales diversos para construcción y acabados de alta calidad.</li>
   </ul>
@@ -193,7 +195,7 @@ p {
 
       <div class="contact-item">
         <span>📍</span>
-        <p>
+        <p class="footerText">
           C. 29 Sur 4, La Paz, 72160,<br>
           Heroica Puebla de Zaragoza, Puebla.
         </p>
