--- a/infraestructura.html
+++ b/infraestructura.html
@@ -15,7 +15,7 @@
 
 p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -126,7 +126,7 @@ p {
   <a href="instalaciones.html">02. INSTALACIONES ESPECIALIZADAS</a>
   <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
-  <a href="infraestructura.html">05. INFRAESTRUCTURA TÉCNICA Y OPERATIVA</a>
+  <a href="infraestructura.html" class="active">05. INFRAESTRUCTURA TÉCNICA Y OPERATIVA</a>
   <a href="acabados.html">06. ACABADOS Y DETALLES INTERIORES</a>
   <a href="mantenimiento.html">07. MANTENIMIENTO INTEGRAL</a>
   <a href="polizas.html">08. PÓLIZAS Y CONTRATOS DE SERVICIO</a>
@@ -151,24 +151,28 @@ p {
   </p>
 
   <h3>Subservicios Incluidos</h3>
-
+  <br>
   <strong>Sistemas de Voz y Datos</strong>
+  <br><br>
   <ul>
     <li>Instalación de cableado estructurado y redes de comunicación.</li>
     <li>Configuración de sistemas de telecomunicaciones avanzados.</li>
   </ul>
-
+  <br>
   <strong>Elevadores y Sistemas de Transporte Vertical</strong>
+  <br><br>
   <ul>
     <li>Instalación y mantenimiento de elevadores y otros sistemas de transporte.</li>
   </ul>
-
+  <br>
   <strong>Paneles y Prefabricados</strong>
+  <br><br>
   <ul>
     <li>Suministro e instalación de paneles y elementos prefabricados para construcción.</li>
   </ul>
-
+  <br>
   <strong>Cancelería y Herrería</strong>
+  <br><br>
   <ul>
     <li>Ventanas, puertas, cancel, fijos, domos, barandales, escaleras.</li>
   </ul>
