--- a/obra-civil.html
+++ b/obra-civil.html
@@ -11,7 +11,7 @@
 <style>
   p {
       font-family: "Segoe UI", sans-serif;
-      font-size: 16px;
+      font-size: 18px;
       font-weight: 400;
       line-height: 1.7;
       color: #222;
@@ -117,7 +117,7 @@
 
    <aside class="service-menu">
 
-  <a href="obra-civil.html">01. OBRA CIVIL Y ESTRUCTURA</a>
+  <a href="obra-civil.html" class="active">01. OBRA CIVIL Y ESTRUCTURA</a>
   <a href="instalaciones.html">02. INSTALACIONES ESPECIALIZADAS</a>
   <a href="seguridad.html">03. SISTEMAS DE SEGURIDAD</a>
   <a href="climatizacion.html">04. CLIMATIZACIÓN Y CONTROL AMBIENTAL</a>
@@ -148,8 +148,9 @@
 </p>
 
 <h3>Subservicios Incluidos</h3>
-
+<br>
 <h4>Fundaciones y Cimentación</h4>
+<br>
 <ul>
   <li>Zapatas</li>
   <li>Contratrabe</li>
@@ -160,16 +161,18 @@
   <li>Muro armado</li>
   <li>Plantilla</li>
 </ul>
-
+<br>
 <h4>Estructura y Soporte</h4>
+<br>
 <ul>
   <li>Concreto reforzado</li>
   <li>Acero estructural</li>
   <li>Cubiertas y techumbres</li>
   <li>Estructura de madera</li>
 </ul>
-
+<br>
 <h4>Obras Exteriores</h4>
+<br>
 <ul>
   <li>Muros de mampostería</li>
   <li>Cadenas dalas y castillos</li>
