--- a/seguridad.html
+++ b/seguridad.html
@@ -24,6 +24,15 @@ p {
 li{
   font-size: 18px;
 }
+
+@media (max-width: 768px) {
+
+   .service-content p,
+   .service-content li {
+      font-size: .9rem;
+   }
+
+}
 </style>
 
 </head>
