--- a/climatizacion.html
+++ b/climatizacion.html
@@ -26,6 +26,15 @@ p {
   font-size: 18px;
 }
 
+@media (max-width: 768px) {
+
+   .service-content p,
+   .service-content li {
+      font-size: .9rem;
+   }
+
+}
+
 </style>
 
 </head>
