--- a/mantenimiento.html
+++ b/mantenimiento.html
@@ -27,6 +27,16 @@ p {
   font-size: 18px;
 }
 
+
+@media (max-width: 768px) {
+
+   .service-content p,
+   .service-content li {
+      font-size: .9rem;
+   }
+
+}
+
 </style>
 
 </head>
