--- a/proyectos.html
+++ b/proyectos.html
@@ -154,7 +154,7 @@
     proyectos autorizados por ellos.
     <br><br>
     Desde hace dos sexenios, los trabajadores mexicanos tenemos por derecho la opción de ocupar una parte de los
-    ahorros en la cuenta de Afore para remodelar o terminar de construir en nuestra vivienda.
+    ahorros en la cuenta de afore para remodelar o terminar de construir en nuestra vivienda.
     <br><br>
     Se trata de un programa autorizado por Infonavit y Fovissste respectivamente, en donde los derechohabientes
     presentan un proyecto de remodelación con base a las necesidades de vivienda en su domicilio, este proyecto es
