--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Constructora Zaragoza</title>
   <link rel="stylesheet" href="src/css/styles.css">
+  <link rel="shortcut icon" href="src/img/logo/favZaragoza.png" type="image/x-icon">
 </head>
 <body>
 
